--- a/plugins/lovata/shopaholic/models/product/fields.yaml
+++ b/plugins/lovata/shopaholic/models/product/fields.yaml
@@ -17,6 +17,18 @@ fields:
             field: name
             type: slug
         type: text
+    link_shopee:
+        label: 'Link Shopee'
+        span: auto
+        type: text
+    link_bukalapak:
+        label: 'Link Bukalapak'
+        span: auto
+        type: text
+    link_tokped:
+        label: 'Link Tokopedia'
+        span: auto
+        type: text
 tabs:
     fields:
         category:
@@ -64,15 +76,15 @@ tabs:
             type: richeditor
             tab: 'lovata.toolbox::lang.tab.description'
         preview_image:
-                label: 'lovata.toolbox::lang.field.preview_image'
-                mode: image
-                useCaption: true
-                thumbOptions:
-                    mode: crop
-                    extension: auto
-                span: left
-                type: fileupload
-                tab: 'lovata.toolbox::lang.tab.images'
+            label: 'lovata.toolbox::lang.field.preview_image'
+            mode: image
+            useCaption: true
+            thumbOptions:
+                mode: crop
+                extension: auto
+            span: left
+            type: fileupload
+            tab: 'lovata.toolbox::lang.tab.images'
         images:
             label: 'lovata.toolbox::lang.field.images'
             mode: image
