--- a/plugins/lovata/shopaholic/updates/version.yaml
+++ b/plugins/lovata/shopaholic/updates/version.yaml
@@ -70,3 +70,6 @@
     - 'Added translatable slug in Product, Brand, Category, PromoBlock models.'
 1.19.1:
     - 'Fixed permissions for promo block menu item. Thanks for contribution Andreas Kosmowicz.'
+1.19.2:
+    - 'Updated table lovata_shopaholic_products'
+    - builder_table_update_lovata_shopaholic_products.php
