--- a/plugins/rainlab/blog/models/post/fields.yaml
+++ b/plugins/rainlab/blog/models/post/fields.yaml
@@ -1,52 +1,54 @@
-# ===================================
-#  Field Definitions
-# ===================================
-
 fields:
-
     title:
-        label: rainlab.blog::lang.post.title
+        label: 'rainlab.blog::lang.post.title'
         span: left
-        placeholder: rainlab.blog::lang.post.title_placeholder
-
+        placeholder: 'rainlab.blog::lang.post.title_placeholder'
+        type: text
     slug:
-        label: rainlab.blog::lang.post.slug
+        label: 'rainlab.blog::lang.post.slug'
         span: right
-        placeholder: rainlab.blog::lang.post.slug_placeholder
+        placeholder: 'rainlab.blog::lang.post.slug_placeholder'
         preset:
             field: title
             type: slug
-
+        type: text
     toolbar:
         type: partial
         path: post_toolbar
         cssClass: collapse-visible
-
+    blog_image:
+        label: 'File upload'
+        mode: image
+        imageWidth: '600'
+        imageHeight: '400'
+        useCaption: true
+        thumbOptions:
+            mode: crop
+            extension: auto
+        span: right
+        cssClass: img-responsive
+        type: fileupload
 secondaryTabs:
-    stretch: true
     fields:
         content:
-            tab: rainlab.blog::lang.post.tab_edit
+            tab: 'rainlab.blog::lang.post.tab_edit'
             type: RainLab\Blog\FormWidgets\BlogMarkdown
-            cssClass: field-slim blog-post-preview
+            cssClass: 'field-slim blog-post-preview'
             stretch: true
             mode: split
-
         categories:
-            tab: rainlab.blog::lang.post.tab_categories
+            tab: 'rainlab.blog::lang.post.tab_categories'
             type: relation
-            commentAbove: rainlab.blog::lang.post.categories_comment
-            placeholder: rainlab.blog::lang.post.categories_placeholder
-
+            commentAbove: 'rainlab.blog::lang.post.categories_comment'
+            placeholder: 'rainlab.blog::lang.post.categories_placeholder'
         published:
-            tab: rainlab.blog::lang.post.tab_manage
-            label: rainlab.blog::lang.post.published
+            tab: 'rainlab.blog::lang.post.tab_manage'
+            label: 'rainlab.blog::lang.post.published'
             span: left
             type: checkbox
-
         published_at:
-            tab: rainlab.blog::lang.post.tab_manage
-            label: rainlab.blog::lang.post.published_on
+            tab: 'rainlab.blog::lang.post.tab_manage'
+            label: 'rainlab.blog::lang.post.published_on'
             span: left
             cssClass: checkbox-align
             type: datepicker
@@ -55,16 +57,14 @@ secondaryTabs:
                 action: enable
                 field: published
                 condition: checked
-
         excerpt:
-            tab: rainlab.blog::lang.post.tab_manage
-            label: rainlab.blog::lang.post.excerpt
+            tab: 'rainlab.blog::lang.post.tab_manage'
+            label: 'rainlab.blog::lang.post.excerpt'
             type: textarea
             size: small
-
         featured_images:
-            tab: rainlab.blog::lang.post.tab_manage
-            label: rainlab.blog::lang.post.featured_images
+            tab: 'rainlab.blog::lang.post.tab_manage'
+            label: 'rainlab.blog::lang.post.featured_images'
             type: fileupload
             mode: image
             imageWidth: 200
