--- a/plugins/lovata/shopaholic/models/product/columns.yaml
+++ b/plugins/lovata/shopaholic/models/product/columns.yaml
@@ -53,3 +53,7 @@ columns:
         type: timetense
         sortable: true
         invisible: true
+    price:
+        label: Harga
+        type: number
+        searchable: true
