--- a/plugins/lovata/shopaholic/models/product/fields.yaml
+++ b/plugins/lovata/shopaholic/models/product/fields.yaml
@@ -108,3 +108,8 @@ tabs:
             type: partial
             path: ~/plugins/lovata/shopaholic/controllers/products/_offer.htm
             tab: 'lovata.shopaholic::lang.tab.offer'
+        'tag[]':
+            label: aa
+            span: auto
+            type: checkbox
+            tab: Tags
