--- a/plugins/lovata/shopaholic/models/product/columns.yaml
+++ b/plugins/lovata/shopaholic/models/product/columns.yaml
@@ -67,3 +67,6 @@ columns:
         type: text
         searchable: true
         sortable: true
+    pre_order:
+        label: 'Pre Order'
+        type: text
